# src/frontend/openapi.json
@@ -395,6 +395,7 @@
           "completedAt",
           "durationMs",
           "status",
+          "attempt",
           "errorType",
           "errorMessage"
         ],
@@ -429,6 +430,14 @@
           },
           "status": {
             "$ref": "#/components/schemas/StepStatus"
+          },
+          "attempt": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
           },
           "errorType": {
             "type": [
